# retail-crew

./: .gitignore  pyproject.toml
retail_crew/: retail_agents.py  schemas.py  store.py  tools.py
