[tool.poetry]
name = "retail-crew"
version = "0.1.0"
description = ""
authors = ["siddhant-mi <siddhant.pandey@mindinventory.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.5"}
scheduler = "^0.8.5"
sentence-transformers = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
